# visual-chatgpt

./: .env.min  .env.sample  .gitignore  README.md  download.sh  requirement.txt  requirements-dev.txt  setup.cfg  visual_chatgpt.py
visual_chatgpt/: tool_manager.py  types.py  utils.py  visual_chatgpt.py
visual_chatgpt/tools/: base.py  blipvqa.py  canny2image.py  depth2image.py  hed2image.py  image2canny.py  image2depth.py  image2hed.py  image2line.py  image2normal.py  image2pose.py  image2scribble.py  image2seg.py  image_captioning.py  image_editing.py  line2image.py  mask_former.py  normal2image.py  pix2pix.py  pose2image.py  scribble2image.py  seg2image.py  t2i.py
