[metadata]
name = visual-chatgpt
version = 0.0.1
author = Vlad Emelianov
author_email = vlad.emelianov.nz@gmail.com
description = Visual ChatGPT connects ChatGPT and a series of Visual Foundation Models
long_description = file: README.md
keywords = chatgpt, visual
license = MIT
classifiers =
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    torch==1.12.1
    torchvision==0.13.1
    numpy==1.23.1
    transformers==4.26.1
    albumentations==1.3.0
    opencv-python==4.5.1.48
    imageio==2.9.0
    imageio-ffmpeg==0.4.2
    pytorch-lightning==1.5.0
    omegaconf==2.1.1
    test-tube>=0.7.5
    streamlit==1.12.1
    einops==0.3.0
    webdataset==0.2.5
    kornia==0.6
    open_clip_torch==2.0.2
    invisible-watermark>=0.1.5
    streamlit-drawable-canvas==0.8.0
    torchmetrics==0.6.0
    timm==0.6.12
    addict==2.4.0
    yapf==0.32.0
    prettytable==3.6.0
    safetensors==0.2.7
    basicsr==1.4.2
    langchain==0.0.101
    diffusers
    gradio
    openai
    accelerate
    python-dotenv

[options.entry_points]
console_scripts =
    visual_chatgpt = visual_chatgpt.visual_chatgpt:main

[flake8]
max-line-length = 100
exclude = .git,__pycache__,docs,build,dist,test_*.py,*.pyi
ignore = E203,W503,E501,D200,D107,D401,D105
max-complexity = 14
